package com.example.myapplication.ui.Register



import android.app.Activity
import androidx.activity.compose.rememberLauncherForActivityResult
import androidx.activity.result.contract.ActivityResultContracts
import androidx.compose.foundation.Image
import androidx.compose.foundation.background
import androidx.compose.foundation.clickable
import androidx.compose.foundation.layout.Arrangement
import androidx.compose.foundation.layout.Box
import androidx.compose.foundation.layout.Column
import androidx.compose.foundation.layout.ExperimentalLayoutApi
import androidx.compose.foundation.layout.FlowRow
import androidx.compose.foundation.layout.Row
import androidx.compose.foundation.layout.Spacer
import androidx.compose.foundation.layout.fillMaxSize
import androidx.compose.foundation.layout.fillMaxWidth
import androidx.compose.foundation.layout.height
import androidx.compose.foundation.layout.padding
import androidx.compose.foundation.layout.size
import androidx.compose.foundation.layout.width
import androidx.compose.foundation.rememberScrollState
import androidx.compose.foundation.shape.RoundedCornerShape
import androidx.compose.foundation.verticalScroll
import androidx.compose.material.icons.Icons
import androidx.compose.material.icons.filled.CalendarToday
import androidx.compose.material.icons.filled.MailOutline
import androidx.compose.material.icons.outlined.Cases
import androidx.compose.material.icons.outlined.Description
import androidx.compose.material.icons.outlined.Lock
import androidx.compose.material.icons.outlined.Person
import androidx.compose.material3.DividerDefaults
import androidx.compose.material3.HorizontalDivider
import androidx.compose.material3.MaterialTheme
import androidx.compose.material3.Text
import androidx.compose.runtime.Composable
import androidx.compose.runtime.collectAsState
import androidx.compose.runtime.getValue
import androidx.compose.ui.Alignment
import androidx.compose.ui.Modifier
import androidx.compose.ui.graphics.Color
import androidx.compose.ui.platform.LocalContext
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.res.colorResource
import androidx.compose.ui.res.painterResource
import androidx.compose.ui.res.stringResource
import androidx.compose.ui.text.font.FontWeight
import androidx.compose.ui.tooling.preview.Preview
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import androidx.navigation.NavController
import androidx.navigation.compose.rememberNavController
import com.example.myapplication.R
import com.example.myapplication.navigation.Rutas
import com.example.myapplication.navigation.navigateSingleTopTo
import com.example.myapplication.ui.InicioSesion.AuthGoogle
import com.example.myapplication.ui.InicioSesion.BotonGoogle
import com.example.myapplication.ui.Register.RegisterViewModel
import com.example.myapplication.ui.theme.MyApplicationTheme
import com.example.myapplication.ui.utils.Bienvenida
import com.example.myapplication.ui.utils.BotonInteres
import com.example.myapplication.ui.utils.Form
import com.example.myapplication.ui.utils.LogoTrazzo


@Composable
@Preview(showBackground = true)
fun LogoAppRPreview(){
    LogoTrazzo(modifier = Modifier.height(7.dp))
}
@Composable
@Preview(showBackground = true)
fun BienvenidaPreview(){
    Bienvenida(R.string.bienvenida,R.string.creatividad)
}
//Formulario Informacion basica del usuario
@Composable
fun InfoBasica(correo: String, contraseña: String, usuario: String, edad: String,
               onCorreoChange: (String) -> Unit,
               onContraseñaChange: (String) -> Unit,
               onUsuarioChange: (String) -> Unit,
                onEdadChange: (String) -> Unit,
               modifier: Modifier = Modifier){

    Column(
        modifier = modifier
    ){
        Text(
            stringResource(R.string.informacion),
            fontWeight = FontWeight.Bold,
            modifier = Modifier.padding(start = 15.dp),
            color = colorResource(R.color.GrisOscuro)
        )
        Spacer(modifier = Modifier.height(5.dp))
        Form(Icons.Default.MailOutline,
            stringResource(R.string.icono_correo),
            stringResource(R.string.correo),
            stringResource(R.string.tu_email_com),correo,onCorreoChange,
            tag = "FormCorreoElectronico"
        )
        Form(Icons.Outlined.Lock,
            stringResource(R.string.icono_contrase_a),
            stringResource(R.string.contra),
            stringResource(R.string.minimo_6_caracteres),
            contraseña,onContraseñaChange,op=2,
            tag = "FormContraseña")
        Row(verticalAlignment = Alignment.CenterVertically) {
            Column(
                modifier.width(230.dp)
            ) {
                Form(Icons.Outlined.Person,
                    stringResource(R.string.icono_usuario),
                    stringResource(R.string.usuario),
                    stringResource(R.string.nombre_artista),
                    usuario,onUsuarioChange,
                    tag = "FormNombreUsuario")
            }
            Column {
                Form(Icons.Default.CalendarToday,
                    stringResource(R.string.icono_edad),
                    stringResource(R.string.edad),
                    stringResource(R.string._18),
                    edad,onEdadChange,
                    tag = "FormEdad")
            }

        }
    }

}
@Composable
@Preview(showBackground = true)
fun InfoBasicaPreview(){
    InfoBasica(correo = "",
        contraseña = "",
        usuario = "",
        edad = "",
        onCorreoChange = {},
        onContraseñaChange = {},
        onUsuarioChange = {},
        onEdadChange = {})
}
//Para hacer las badges de los interes artisticos
@OptIn(ExperimentalLayoutApi::class)
@Composable
fun Intereses(modifier: Modifier = Modifier){
    val intereses = listOf(
        stringResource(R.string.pintura),
        stringResource(R.string.dibujo), stringResource(R.string.fotograf_a),
        stringResource(R.string.dise_o_digital),
        stringResource(R.string.origami), stringResource(R.string.escultura),
        stringResource(R.string.street_art), stringResource(R.string.moda),
        stringResource(R.string.ilustraci_n),
        stringResource(R.string.concept_art), stringResource(R.string.arte_tradicional),
        stringResource(R.string.collage), stringResource(R.string.acuarela),
        stringResource(R.string.leo), stringResource(R.string.acr_lico)
    )
    FlowRow(modifier = modifier.padding(start = 5.dp)) {
        intereses.forEach { interes -> BotonInteres(interes, MaterialTheme.colorScheme.primaryContainer,
            MaterialTheme.colorScheme.onPrimaryContainer,
            {},Modifier
                .height(36.dp)
                .padding(horizontal = 6.dp)
                .testTag("BotonInteres$interes"))}
    }
}
//Formulario de los gustos artisticos del usuario
@Composable
fun PerfilArtistico(profesion: String,
                    bio: String,
                    onProfesionChange: (String) -> Unit,
                    onBioChange: (String) -> Unit,
                    modifier: Modifier = Modifier){
    Column(
        modifier = modifier
    ) {
        Text(
            stringResource(R.string.perfil),
            modifier = Modifier.padding(horizontal = 15.dp, vertical = 3.dp),
            fontWeight = FontWeight.Bold,
            color = colorResource(R.color.GrisOscuro)
        )
        Spacer(modifier = Modifier.height(5.dp))
        Form(Icons.Outlined.Cases,
            stringResource(R.string.icono_profesion),
            stringResource(R.string.profe),
            stringResource(R.string.selecciona_tu_profesion),
            profesion,
            onProfesionChange,
            modifier.height(30.dp),
            tag = "FormProfesion")

        Form(Icons.Outlined.Description,
            stringResource(R.string.icono_biografia),
            stringResource(R.string.biografia),
            stringResource(R.string.cuentanos_sobre_ti_tu_estilo_artistico_experiencia_y_lo_que_te_apasina_del_arte),
            bio,
            onBioChange,
            tag = "FormBio")
    }

}
@Composable
@Preview(showBackground = true)
fun PerfilArtisticoPreview(){
    MyApplicationTheme { PerfilArtistico("", "",
        onProfesionChange = {},
        onBioChange = {}) }
}
//Para mostrar todo el segmento de badges con los posibles intereses artisticos
@Composable
fun InteresAritistico(modifier: Modifier = Modifier){
    Column(
        modifier = modifier
    ){
        Text(
            stringResource(R.string.intereses),
            modifier = Modifier.padding(start = 15.dp, top = 3.dp, bottom = 3.dp),
            fontWeight = FontWeight.Bold,
            color = colorResource(R.color.GrisOscuro)
        )
        Intereses()
        Text(
            stringResource(R.string.seleccionar),
            modifier = Modifier.padding(start = 15.dp, top = 3.dp, bottom = 3.dp),
            color = colorResource(R.color.GrisMedio)
        )
    }
}
@Composable
@Preview(showBackground = true)
fun InteresAritisticoPreview(){
    InteresAritistico()
}
//Para Hacer e boton de Crear Cuenta
@Composable
fun BotonCrear(registerButtonPressed: () -> Unit = {},modifier: Modifier = Modifier){
    BotonInteres(stringResource(R.string.crear), MaterialTheme.colorScheme.primaryContainer,
        MaterialTheme.colorScheme.onSecondaryContainer ,registerButtonPressed,modifier
        .width(370.dp)
        .height(60.dp)
        .testTag("BotonCrearCuenta"))

    Box(modifier = Modifier.fillMaxWidth(), contentAlignment = Alignment.Center) {
        HorizontalDivider(Modifier, DividerDefaults.Thickness, color = Color.LightGray)
        Box(modifier = Modifier.padding(horizontal = 8.dp)) {
            Text(
                text = "o",
                style = MaterialTheme.typography.bodySmall,
                color = Color.Gray
            )
        }
    }
}
@Composable
@Preview
fun BotonCrearPreview(){
    MyApplicationTheme {  // Asegúrate de envolverlo en tu tema para aplicar estilos
    BotonCrear()
    }
}
// el cuerpo de la pantalla de registro
@Composable
fun BodyCrearCuenta(mensajeError: String,
    mostrarMensajeError: Boolean,
    correo: String,
    contraseña:String,
    usuario:String,
    edad:String,
    profesion:String,
    bio:String,
    onCorreoChange: (String) -> Unit,
    onContraseñaChange: (String) -> Unit,
    onUsuarioChange: (String) -> Unit,
    onEdadChange: (String) -> Unit,
    onProfesionChange: (String) -> Unit,
    onBioChange: (String) -> Unit,
    registerButtonPressed: () -> Unit = {},
    modifier: Modifier = Modifier,
                    navController: NavController){
    Column(
        modifier = modifier
    ) {
        Column (
            horizontalAlignment = Alignment.CenterHorizontally,
            modifier = Modifier.fillMaxWidth()
        ){
            Spacer(modifier = Modifier.height(30.dp))
            LogoTrazzo(modifier= Modifier.height(70.dp))
            Bienvenida(R.string.bienvenida,R.string.creatividad)
            Spacer(modifier = Modifier.height(15.dp))
        }
        Column {
            InfoBasica(correo,contraseña,usuario,edad,
                onCorreoChange,
                onContraseñaChange,
                onUsuarioChange,
                onEdadChange)
            Spacer(modifier = Modifier.height(8.dp))
            PerfilArtistico(profesion,bio,
                onProfesionChange,
                onBioChange)
            InteresAritistico()
        }
        Column(
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            Spacer(modifier = Modifier.height(8.dp))
            if (mostrarMensajeError){
                Text(mensajeError,Modifier.testTag("MensajeError"))
            }
            BotonCrear(registerButtonPressed)
            Spacer(modifier = Modifier.height(8.dp))
            val context = LocalContext.current
            val activity = context as Activity
            val launcher = rememberLauncherForActivityResult(
                contract = ActivityResultContracts.StartActivityForResult()
            ) { result ->
                AuthGoogle.handleResult(
                    result.data,
                    onSuccess = {
                        println("Inicio de sesión con Google exitoso")
                        navController.navigateSingleTopTo(Rutas.Principal.ruta)
                    },
                    onError = { error ->
                        println("Error Google Sign-In: $error")
                    }

                )
            }
            BotonGoogle(
                onClick = { AuthGoogle.signIn(activity, launcher) },
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(horizontal = 16.dp)
            )
            Text(
                stringResource(R.string.anuncio),
                modifier = Modifier.padding(horizontal = 25.dp, vertical = 6.dp),
                color = colorResource(R.color.GrisMedio),
                fontSize = 15.sp
            )
        }
    }

}

//La pantalla de registro final
@Composable
fun RegisterScreen(viewModel: RegisterViewModel,
                   modifier: Modifier = Modifier.testTag("RegisterScreen")){
    val state by viewModel.uiState.collectAsState()
    Column(
        modifier = modifier
            .fillMaxSize()
            .verticalScroll(rememberScrollState())
    ){
        BodyCrearCuenta(state.mensajeError,state.mostrarMensajeError,state.correo,state.contraseña,state.usuario,state.edad,state.profesion,state.bio,
            onCorreoChange = {viewModel.updateCorreo(it)},
            onContraseñaChange = {viewModel.updateContraseña(it)},
            onUsuarioChange = {viewModel.updateUsuario(it)},
            onEdadChange = {viewModel.updateEdad(it)},
            onProfesionChange = {viewModel.updateProfesion(it)},
            onBioChange = {viewModel.updateBio(it)},{viewModel.registerButtonPressed()},
            navController = rememberNavController()
        )

        Spacer(modifier = Modifier.height(30.dp))
    }
}
@Composable
fun BotonGoogle(
    onClick: () -> Unit,
    modifier: Modifier = Modifier.testTag("BotonGoogle")
) {
    Row(
        modifier = modifier
            .fillMaxWidth()
            .padding(horizontal = 20.dp)
            .height(60.dp)
            .background(Color.White, RoundedCornerShape(12.dp))
            .clickable { onClick() },
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.Center
    ) {
        Image(
            painter = painterResource(id = R.drawable.google_logo),
            contentDescription = "Logo de Google",
            modifier = Modifier.size(24.dp)
        )
        Spacer(modifier = Modifier.width(12.dp))
        Text(
            text = "Continuar con Google",
            color = Color.Black,
            fontSize = 16.sp,
            fontWeight = FontWeight.Medium
        )
    }
}
