...
        }
        //Navegacion Pagina principal
        composable(Rutas.Principal.ruta) {
            val viewmodel: PrincipalViewModel = hiltViewModel()
            val state by viewmodel.uiState.collectAsState()

            PrincipalScreen({obraId->navControler.navigate(Rutas.Detalle.createRoute(obraId ))}, {perfilId->navControler.navigate(Rutas.Perfil.createPRoute(perfilId))},viewmodel)
        }
        //Navegacion Inicio de Sesion
        composable(Rutas.Login.ruta) {
            val viewmodel: InicioSesionViewModel= hiltViewModel()
            val state by viewmodel.uiState.collectAsState()
            if (state.navegar){
                navControler.navigateSingleTopTo(Rutas.Principal.ruta)
                viewmodel.resetFlag()
            }
            InicioSesionScreen(viewmodel, { navControler.navigate(Rutas.Register.ruta) },navControler)
        }
        //Navegacion Registro
        composable(Rutas.Register.ruta) {
            val viewmodel: RegisterViewModel=hiltViewModel()
            val state by viewmodel.uiState.collectAsState()
            if (state.navegar){
...
        //Navegacion Detalles de las obras
        composable("detalle/{obraId}", arguments = listOf(navArgument("obraId"){type = NavType.StringType})) {
            val obraId = it.arguments?.getString("obraId") ?: ""
            val viewmodel: VistaObrasViewModel = hiltViewModel()
            val state by viewmodel.uiState.collectAsState()
            if (obraId != "") {
                VistaObrasScreen(obraId,{obraId->navControler.navigate(Rutas.CrearComment.createCRoute(obraId))},{},viewmodel)
            }
        }
        composable(Rutas.Seguidores.ruta, arguments = listOf(navArgument("perfilId"){type = NavType.StringType})){
            val UsuarioId=it.arguments?.getString("perfilId") ?:""
            val viewmodel: SeguidoresoSeguidosViewModel = hiltViewModel()
            SeguidoresoSeguidosScreen(viewmodel, UsuarioId, false)
...
