...
            onClick = {loginButtonPressed()},
            modifier = Modifier.width(200.dp).testTag("Login_button")
        )
        AddButton(
            stringResource(R.string.registrarse),
            onClick = {registerButtonPressed()},
            modifier = Modifier.width(200.dp).testTag("Register_button"),
        )

        Row {
            ExternalLogo(idImagen = R.drawable.google_logo, description = "google")
            ExternalLogo(idImagen = R.drawable.facebook_logo, description = "facebook")
            ExternalLogo(idImagen = R.drawable.instagram_logo, description = "instagram")
...
