...
fun TarjetaPublicacion(
    publicacion: Obra,
    obraClicked: (String) -> Unit = {},
    perfilClicked: (String) -> Unit = {},
    modifier: Modifier = Modifier,
    perfilTag: String = "",
    cardTag: String = ""
) {
    Card(
        onClick = { obraClicked(publicacion.obraId) },
        modifier = modifier
            .padding(horizontal = 16.dp).testTag(cardTag),
        shape = RoundedCornerShape(10.dp),
...
